MODON MRE BPDEV/force-app/main/default/objects/Checkout_Config__mdt/Checkout_Config__mdt.object-meta.xml
<CustomObject>
    <label>Checkout Config</label>
    <pluralLabel>Checkout Configs</pluralLabel>
</CustomObject>