MODON MRE BPDEV/force-app/main/default/objects/Checkout_Config__mdt/fields/Booking_Link_Expiry_Seconds__c.field-meta.xml
<CustomField>
    <fullName>Booking_Link_Expiry_Seconds__c</fullName>
    <label>Booking Link Expiry Seconds</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>