MODON MRE BPDEV/force-app/main/default/objects/Checkout_Config__mdt/fields/Default_Billing_Country__c.field-meta.xml
<CustomField>
    <fullName>Default_Billing_Country__c</fullName>
    <description>ISO 3166-1 alpha-2 country used for billing.address.country when a caller does not pass one. This Checkout account requires a billing address on payment links.</description>
    <label>Default Billing Country</label>
    <length>2</length>
    <type>Text</type>
</CustomField>