MODON MRE BPDEV/force-app/main/default/objects/Checkout_Config__mdt/fields/Default_Capture__c.field-meta.xml
<CustomField>
    <fullName>Default_Capture__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Default Capture</label>
    <type>Checkbox</type>
</CustomField>