MODON MRE BPDEV/force-app/main/default/objects/Checkout_Config__mdt/fields/Default_Currency__c.field-meta.xml
<CustomField>
    <fullName>Default_Currency__c</fullName>
    <label>Default Currency</label>
    <length>3</length>
    <type>Text</type>
</CustomField>