MODON MRE BPDEV/force-app/main/default/objects/Checkout_Config__mdt/fields/Default_Return_Url__c.field-meta.xml
<CustomField>
    <fullName>Default_Return_Url__c</fullName>
    <label>Default Return URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>