MODON MRE BPDEV/force-app/main/default/objects/Checkout_Config__mdt/fields/Link_Expiry_Seconds__c.field-meta.xml
<CustomField>
    <fullName>Link_Expiry_Seconds__c</fullName>
    <label>Link Expiry Seconds</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>