MODON MRE BPDEV/force-app/main/default/objects/Checkout_Config__mdt/fields/Max_Booking_Links_Per_Fee__c.field-meta.xml
<CustomField>
    <fullName>Max_Booking_Links_Per_Fee__c</fullName>
    <label>Max Booking Links Per Fee</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>