MODON MRE BPDEV/force-app/main/default/objects/Checkout_Config__mdt/fields/Poll_Interval_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Poll_Interval_Minutes__c</fullName>
    <label>Poll Interval Minutes</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>