MODON MRE BPDEV/force-app/main/default/objects/Checkout_Config__mdt/fields/Poll_Lookback_Days__c.field-meta.xml
<CustomField>
    <fullName>Poll_Lookback_Days__c</fullName>
    <label>Poll Lookback Days</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>