MODON MRE BPDEV/force-app/main/default/objects/Checkout_Config__mdt/fields/Public_Key__c.field-meta.xml
<CustomField>
    <fullName>Public_Key__c</fullName>
    <label>Public Key</label>
    <length>100</length>
    <type>Text</type>
</CustomField>