MODON MRE BPDEV/force-app/main/default/objects/Checkout_Config__mdt/fields/Reissue_Window_Days__c.field-meta.xml
<CustomField>
    <fullName>Reissue_Window_Days__c</fullName>
    <inlineHelpText>How long after a link runs out a new one for the same customer still counts as its replacement. Only applies when the new link is for a different interest. Blank falls back to the class default of 7.</inlineHelpText>
    <label>Reissue Window Days</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>