MODON MRE BPDEV/force-app/main/default/objects/Checkout_Config__mdt/fields/Renew_Within_Days__c.field-meta.xml
<CustomField>
    <fullName>Renew_Within_Days__c</fullName>
    <inlineHelpText>How many days before a hold expires the renewal job starts trying. Because the job runs daily, this is also how many attempts a hold gets. Blank falls back to the class default of 4.</inlineHelpText>
    <label>Renew Within Days</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>