MODON MRE BPDEV/force-app/main/default/objects/Checkout_Config__mdt/fields/Webhook_Auth_Key__c.field-meta.xml
<CustomField>
    <fullName>Webhook_Auth_Key__c</fullName>
    <description>Checkout.com webhook &quot;Authorization Header Key&quot; - the value Checkout sends in the Authorization header; the receiver compares against it. Secret.</description>
    <label>Webhook Auth Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>