MODON MRE BPDEV/force-app/main/default/objects/Checkout_Config__mdt/fields/Webhook_Signing_Key__c.field-meta.xml
<CustomField>
    <fullName>Webhook_Signing_Key__c</fullName>
    <description>Checkout.com webhook &quot;Signature Key&quot; - used to verify the Cko-Signature HMAC-SHA256 of the body. Secret. Optional if Webhook Auth Key is used.</description>
    <label>Webhook Signing Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>